--- a/Homework 2/Homework2.html
+++ b/Homework 2/Homework2.html
@@ -195,5 +195,9 @@
         </tr>
     </tbody>
 </table>
+<form action="">
+    <input type="text" class=""
+    placeholder="Enter your email"
+</form>
 </body>
 </html>
