--- a/Homework 3/homework3.html
+++ b/Homework 3/homework3.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="homework3.css">
-  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="/Homework 3/homework3.css">
+  <link rel="stylesheet" href="/css/normalize.css">
 </head>
 <body>
   <header>
