--- a/Homework 3/homework3.html
+++ b/Homework 3/homework3.html
@@ -9,25 +9,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/Homework 3/homework3.css">
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="homework3.css">
+  <link rel="stylesheet" href="../css/normalize.css">
 </head>
 <body>
   <header>
     <div class="wrapper">
       <div class="logo">
-        <img src="/image/logo.png" alt="logoicon">
+        <img src="../image/logo.png" alt="logoicon">
       </div>
       <div class="social-links">
         <ul>
           <li>
             <a href="https://www.facebook.com">
-              <img src="/image/fb.png" alt="facebookicon">
+              <img src="../image/fb.png" alt="facebookicon">
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com">
-              <img src="/image/twitter.png" alt="twittericon">
+              <img src="../image/twitter.png" alt="twittericon">
             </a>
           </li>
         </ul>
@@ -54,7 +54,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
         Duis cursus, mi quis viverra ornare</p>
       <div class="infinity">
-        <img src="/image/infinity.png" alt="infinityicon">
+        <img src="../image/infinity.png" alt="infinityicon">
       </div>
     </div>
   </section>
@@ -67,7 +67,7 @@
       enim in eros elementum tristique.
     </p>
     <div class="iphone">
-      <img src="/image/iphone.png" alt="iPhoneicon">
+      <img src="../image/iphone.png" alt="iPhoneicon">
     </div>
   </section>
   <section>
@@ -84,23 +84,23 @@
   <footer class="wrapper">
     <div class="wrapper">
       <div class="logofooter">
-        <img src="/image/logo.png" alt="logo">
+        <img src="../image/logo.png" alt="logo">
       </div>
       <div class="links_footer">
         <ul>
           <li>
             <a href="https://www.facebook.com">
-              <img src="/image/fb.png" alt="facebookicon">
+              <img src="../image/fb.png" alt="facebookicon">
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com">
-              <img src="/image/twitter.png" alt="twittericon">
+              <img src="../image/twitter.png" alt="twittericon">
             </a>
           </li>
           <li>
             <a href="#" class="mail">
-              <img src="/image/mail.png" alt="mailicon" width="25px" height="25px">
+              <img src="../image/mail.png" alt="mailicon" width="25px" height="25px">
             </a>
           </li>
         </ul>
