--- a/Homework 4/Homework4.html
+++ b/Homework 4/Homework4.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Homework 4/Homework4.css">
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="Homework4.css">
+    <link rel="stylesheet" href="../css/normalize.css">
 </head>
 <body>
 <section>
     <div class="diyablock">
-        <img src="/image/diya.png" alt="" class="diyalogo">
-        <img src="/image/Flag.png" alt="" class="flag">
+        <img src="../image/diya.png" alt="" class="diyalogo">
+        <img src="../image/Flag.png" alt="" class="flag">
     </div>
 <div class="ukraineflag">
-    <img src="/image/Blue.png" alt="" class="blue">
-    <img src="/image/Glyph.png" alt="" class="glyph">
+    <img src="../image/Blue.png" alt="" class="blue">
+    <img src="../image/Glyph.png" alt="" class="glyph">
 </div>
 <div class="border">
     <div class="flaground">
-        <img src="/image/Blue.png" alt="" class="blueround">
-        <img src="/image/Glyph.png" alt="" class="glyphround">
+        <img src="../image/Blue.png" alt="" class="blueround">
+        <img src="../image/Glyph.png" alt="" class="glyphround">
     </div>
 </div>
 </section>
